WIP: unstable code committed and pushed by shortcut script

--- a/scripts/notebook-Copy1.ipynb
+++ b/scripts/notebook-Copy1.ipynb
@@ -96,30 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "db51ef2e",
    "metadata": {
     "id": "db51ef2e",
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'seaborn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mseaborn\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01msns\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#imports\n",
     "import pandas as pd\n",
     "import os\n",
-    "import seaborn as sns\n",
     "\n",
     "#import xarray as xr\n",
     "#import numpy as np\n",
@@ -127,13 +114,14 @@
     "#from matplotlib import pyplot as plt\n",
     "#from PIL import Image #this needs to be after matplotlib??\n",
     "#from scipy.stats import stats   \n",
+    "import os\n",
     "#import cProfile\n",
     "#cProfile.run('out = comp.function(inputs)') #replace \"function\" and \"inputs\" to profile the function you want to optimize\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "a06b6e4a",
    "metadata": {
     "colab": {
@@ -149,6 +137,7 @@
      "output_type": "stream",
      "text": [
       "demo_data\\test.txt\n",
+      "C:\\Users\\Gregg\\Dropbox (MIT)\\gregg_code\\gregg-circ-homer-models\\scripts\n",
       "False\n"
      ]
     }
@@ -160,49 +149,39 @@
     "    \n",
     "test_path = os.path.join('demo_data', 'test.txt')\n",
     "print(test_path)\n",
-    "cwd = os.getcwd()\n",
-    "repo_path = os.path.split(cwd)[0]\n",
-    "\n",
+    "print(os.getcwd())\n",
     "print(os.path.exists(test_path))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "d6e20d04-b230-4124-abd8-e5e364e78723",
    "metadata": {
     "lines_to_next_cell": 2
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#define paths Test that your data exists here\n",
-    "data_path = os.path.join(repo_path, 'demo_data', '3D Spine volume (um3).csv')\n",
-    "print(os.path.exists(data_path))"
+    "data_path = \"/Users/Gregg/code/gregg-circ-homer-models/scripts/demo_data/ASC26_cell_3_soma.mat\"\n",
+    "print(os.path.exists(soma_path))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "b3586a50",
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
     "id": "b3586a50",
-    "lines_to_next_cell": 0,
+    "lines_to_next_cell": 2,
     "outputId": "56f159c6-3dbc-4b37-d217-083fb5d2e792"
    },
    "outputs": [],
    "source": [
-    "#data inputs"
+    "#data inputs\n"
    ]
   },
   {
@@ -210,8 +189,7 @@
    "execution_count": 11,
    "id": "82a5927b",
    "metadata": {
-    "id": "82a5927b",
-    "lines_to_next_cell": 0
+    "id": "82a5927b"
    },
    "outputs": [],
    "source": [
@@ -230,134 +208,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "5f50b106-282b-46a6-916c-1ad49874b02e",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 0
+   },
    "outputs": [],
    "source": [
-    "#Load data to make plots\n",
-    "spine_volume_df = pd.read_csv(data_path) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "dbd88ca0-6f19-4518-95ff-ac233dfd0724",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0d sh-scramble</th>\n",
-       "      <th>0d sh-circHomer1</th>\n",
-       "      <th>3d sh-scramble</th>\n",
-       "      <th>3d sh-circHomer1</th>\n",
-       "      <th>7d sh-scramble</th>\n",
-       "      <th>7d sh-circHomer1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.0388</td>\n",
-       "      <td>1.4747</td>\n",
-       "      <td>1.2531</td>\n",
-       "      <td>1.1184</td>\n",
-       "      <td>0.5558</td>\n",
-       "      <td>0.6774</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2.4294</td>\n",
-       "      <td>0.6450</td>\n",
-       "      <td>0.3790</td>\n",
-       "      <td>1.2254</td>\n",
-       "      <td>0.1745</td>\n",
-       "      <td>0.7313</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3.1988</td>\n",
-       "      <td>0.5214</td>\n",
-       "      <td>1.6462</td>\n",
-       "      <td>0.2737</td>\n",
-       "      <td>0.9343</td>\n",
-       "      <td>0.5088</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2.7013</td>\n",
-       "      <td>0.7918</td>\n",
-       "      <td>0.3121</td>\n",
-       "      <td>0.5958</td>\n",
-       "      <td>0.4627</td>\n",
-       "      <td>1.6024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.5627</td>\n",
-       "      <td>0.3031</td>\n",
-       "      <td>0.4497</td>\n",
-       "      <td>3.9270</td>\n",
-       "      <td>1.7526</td>\n",
-       "      <td>0.8554</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   0d sh-scramble  0d sh-circHomer1  3d sh-scramble  3d sh-circHomer1  \\\n",
-       "0          7.0388            1.4747          1.2531            1.1184   \n",
-       "1          2.4294            0.6450          0.3790            1.2254   \n",
-       "2          3.1988            0.5214          1.6462            0.2737   \n",
-       "3          2.7013            0.7918          0.3121            0.5958   \n",
-       "4          1.5627            0.3031          0.4497            3.9270   \n",
-       "\n",
-       "   7d sh-scramble  7d sh-circHomer1  \n",
-       "0          0.5558            0.6774  \n",
-       "1          0.1745            0.7313  \n",
-       "2          0.9343            0.5088  \n",
-       "3          0.4627            1.6024  \n",
-       "4          1.7526            0.8554  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#make plots\n",
-    "\n",
-    "spine_volume_df.head(5)\n",
-    "\n",
-    "\n"
+    "#Load data to make plots"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec7f982-8517-4f39-8940-befeace7954d",
-   "metadata": {},
+   "id": "dbd88ca0-6f19-4518-95ff-ac233dfd0724",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
