--- a/scripts/circHomer.ipynb
+++ b/scripts/circHomer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 67,
    "metadata": {
     "id": "LesjUvhOx0z8"
    },
@@ -11,7 +11,315 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.interpolate import CubicSpline\n",
-    "from scipy.optimize import leastsq, minimize\n"
+    "from scipy.optimize import leastsq, minimize\n",
+    "import lmfit\n",
+    "from pprint import pprint\n",
+    "from copy import deepcopy\n",
+    "from collections import OrderedDict\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a set of Parameters\n",
+    "\n",
+    "def create_new_homer_parameters(timepoints: [float], param_names_list) -> lmfit.Parameters:\n",
+    "    params = lmfit.Parameters()\n",
+    "    #for each change timepoint, we want to add values for each of the 5 basic parameters: \n",
+    "    #transcription rate, homer1a spice rate, circularizing rate, linear decay rate and circular decay rate\n",
+    "    \n",
+    "    for name in param_names_list:\n",
+    "        for i, timepoint in enumerate(timepoints):\n",
+    "            if i==0:             \n",
+    "                params.add(f'{name}_{i}', value=0, vary=True)\n",
+    "                params.add(f'{name}_tp_{i}', value=timepoint, vary=False)\n",
+    "            else:\n",
+    "                params.add(f'{name}_{i}', expr=f'{name}_0')\n",
+    "                params.add(f'{name}_tp_{i}', value=timepoint, vary=False)\n",
+    "                #if we want it to be a change and not a bump, then we can set them all equal to the previous instead of 0, but would need to do something about timepoints too. lets just see if this works \n",
+    "    return params\n",
+    "\n",
+    "def update_params(params_in, new_params_dict, bounds_dict) -> lmfit.Parameters:\n",
+    "    new_params = deepcopy(params_in)\n",
+    "    for name, set_params in new_params_dict.items():\n",
+    "        for i, value in enumerate(set_params):\n",
+    "            if type(value) is str:\n",
+    "                new_params[f'{name}_{i}'] = lmfit.Parameter(\n",
+    "                                                    f'{name}_{i}', \n",
+    "                                                    expr = value\n",
+    "                                                    )\n",
+    "            else:\n",
+    "                new_params[f'{name}_{i}'] = lmfit.Parameter(\n",
+    "                                                    f'{name}_{i}', \n",
+    "                                                    value=value, \n",
+    "                                                    vary=True, \n",
+    "                                                    min=bounds_dict[name][0], \n",
+    "                                                    max=bounds_dict[name][1]\n",
+    "                                                    )\n",
+    "    return new_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#testing setup with bicuculin \n",
+    "#Enter fixed timepoints, target values and starting values \n",
+    "\n",
+    "timepoints = [0,2/24, 6/24, 24/24, 48/24]\n",
+    "circ_homer_levels = np.array([1, 1.5, 2, 2.5, 3])\n",
+    "linear_homer_levels = np.array([1, 12, 19, 3, 2])\n",
+    "\n",
+    "min_t_units = -10 #days\n",
+    "max_t_units = 3 #days\n",
+    "\n",
+    "new_params_dict = OrderedDict(\n",
+    "  'transcription_rate': [1, 12*3, 4*3, 2, 2],\n",
+    "  'splice_rate': [0.5],\n",
+    "  'circ_rate': [.01],\n",
+    "  'lin_decay': [25],\n",
+    "  'circ_decay': [.01] ,\n",
+    ")\n",
+    "param_names_list = new_params_dict.keys()\n",
+    "\n",
+    "bounds_dict = {\n",
+    "  'transcription_rate': (0,50),\n",
+    "  'splice_rate': (0,.5) ,\n",
+    "  'circ_rate': (0,.5),\n",
+    "  'lin_decay': (0,50),\n",
+    "  'circ_decay': (0,50),\n",
+    "  'transcription_rate_tp': (min_t_units, max_t_units),\n",
+    "  'splice_rate_tp': (min_t_units, max_t_units),\n",
+    "  'circ_rate_tp': (min_t_units, max_t_units),\n",
+    "  'lin_decay_tp': (min_t_units, max_t_units),\n",
+    "  'circ_decay_tp': (min_t_units, max_t_units),\n",
+    "  }\n",
+    "\n",
+    "\n",
+    "#establish the null parameters (all there but all 0)\n",
+    "null_bicuc_params = create_new_homer_parameters(timepoints, param_names_list)\n",
+    "#now we want to override some params from the base with the default params for each of the models we want to test\n",
+    "#we also need some ranges?\n",
+    "\n",
+    "bicuc_param_sets = {}  #Each new set of parameters will be placed in here\n",
+    "bicuc_param_sets['stable_circ_params'] =  update_params(null_bicuc_params, new_params_dict, bounds_dict)\n",
+    "\n",
+    "new_params_dict = {\n",
+    "  'circ_rate': [.01, .01] ,\n",
+    "  'circ_rate_tp': [0, 1.5] ,\n",
+    "  }\n",
+    "circ_up_bicuc_params \n",
+    "bicuc_param_sets['circ_up_bicuc_params'] = update_params(stable_circ_bicuc_params, new_params_dict, bounds_dict)\n",
+    "\n",
+    "new_params_dict = {\n",
+    "  'circ_decay': ['lin_decay_0'],\n",
+    "  }\n",
+    "bicuc_param_sets['matched_decay_params'] = update_params(stable_circ_bicuc_params, new_params_dict, bounds_dict)\n",
+    "\n",
+    "\n",
+    "#pprint(bicuc_param_sets['stable_circ_params'])\n",
+    "#pprint(bicuc_param_sets['circ_up_bicuc_params'])\n",
+    "#pprint(bicuc_param_sets['matched_decay_params'] )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def create_vectors(parameters, param_names_list, min_t_units=0, max_t_units = 7, steps_per_hour=2, interp_type = 'linear') -> pd.DataFrame:\n",
+    "\n",
+    "    assert(interp_type in ('linear', 'spline'))\n",
+    "           \n",
+    "    num_timesteps = (max_t_units-min_t_units)*24*steps_per_hour\n",
+    "    dt = (max_t_units-min_t_units)/num_timesteps\n",
+    "    timesteps = (np.arange(0,num_timesteps)*dt )+ min_t_units\n",
+    "    zero_index = round(-1*min_t_units/dt)\n",
+    "\n",
+    "    out_dict = {}\n",
+    "    out_dict['timesteps'] = timesteps\n",
+    "    for name in param_names_list:\n",
+    "        x_vect = []\n",
+    "        y_vect = []\n",
+    "        i=0\n",
+    "        while True:\n",
+    "            try:\n",
+    "                x_vect.append(parameters[f'{name}_tp_{i}'])\n",
+    "                y_vect.append(parameters[f'{name}_{i}'])\n",
+    "                i+=1\n",
+    "            except KeyError as E:\n",
+    "                break     \n",
+    "        if interp_type == 'linear':\n",
+    "            out_dict[name] = np.interp(np.interp(timesteps, x_vect, y_vect))\n",
+    "        elif interp_type == 'spline':\n",
+    "            cs = CubicSpline(x_vect, y_vect,\n",
+    "                     bc_type = 'clamped')\n",
+    "            out_dict[name] = cs(timesteps)\n",
+    "\n",
+    "    #these are all the same length so can be put in a dataframe\n",
+    "    time_varying_params_df = pd.DataFrame(out_dict)\n",
+    "\n",
+    "    return time_varying_params_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate(parameters, param_names_list, min_t_units=0, max_t_units = 7, steps_per_hour=2, circ_downstream = 'both') -> pd.DataFrame:\n",
+    "\n",
+    "    time_varying_params_df = create_vectors(parameters, param_names_list, min_t_units=0, max_t_units = 7, steps_per_hour=steps_per_hour)\n",
+    "    out_df = simulate_from_df(time_varying_params_df)\n",
+    "    return out_df\n",
+    "\n",
+    "def simulate_from_df(time_varying_params_df, circ_downstream = 'both') -> pd.DataFrame:\n",
+    "    timesteps = time_varying_params_df['timesteps']\n",
+    "\n",
+    "    #this unpacking should cover all the fitable parameters, ^^timesteps is created during the simulation\n",
+    "    transcription_rate = time_varying_params_df['transcription_rate']\n",
+    "    splice_rate = time_varying_params_df['splice_rate']\n",
+    "    circ_rate = time_varying_params_df['circ_rate']\n",
+    "    lin_decay = time_varying_params_df['lin_decay']\n",
+    "    circ_decay = time_varying_params_df['circ_decay']\n",
+    "\n",
+    "    assert(circ_downstream in ('both', 'yes', 'no'))\n",
+    "    if circ_downstream == 'both':\n",
+    "        homer1a_to_circ_switch = 1\n",
+    "        presplice_to_circ_switch = 1\n",
+    "    if circ_downstream == 'yes':\n",
+    "        homer1a_to_circ_switch = 1\n",
+    "        presplice_to_circ_switch = 0\n",
+    "    if circ_downstream == 'yes':\n",
+    "        homer1a_to_circ_switch = 0\n",
+    "        presplice_to_circ_switch = 1\n",
+    "        \n",
+    "\n",
+    "    pre_splice_homer = np.zeros(timesteps.shape)\n",
+    "    homer1a = np.zeros(timesteps.shape)\n",
+    "    circ_homer = np.zeros(timesteps.shape)\n",
+    "\n",
+    "    for i, t in enumerate(timesteps[1:]):\n",
+    "        converted_to_1a = splice_rate[i]*pre_splice_homer[i]*dt\n",
+    "        rest_to_circ = pre_splice_homer[i]*dt*circ_rate[i]*presplice_to_circ_switch\n",
+    "        homer1a_to_circ = homer1a[i]*dt*circ_rate[i]*homer1a_to_circ_switch\n",
+    "\n",
+    "        delta_homer = transcription_rate[i] - converted_to_1a  - rest_to_circ - lin_decay[i]*dt*pre_splice_homer[i]\n",
+    "        delta_homer1a = converted_to_1a - homer1a_to_circ - lin_decay[i]*dt*homer1a[i]\n",
+    "        delta_circular = rest_to_circ + homer1a_to_circ - circ_decay[i]*dt*circ_homer[i]\n",
+    "        \n",
+    "        pre_splice_homer[i+1] = pre_splice_homer[i]+delta_homer\n",
+    "        homer1a[i+1] = homer1a[i]+delta_homer1a\n",
+    "        circ_homer[i+1] = circ_homer[i]+delta_circular\n",
+    "    \n",
+    "    #normalized_linear_amount = homer1a/(homer1a[zero_index])\n",
+    "    #normalized_circular_amount = circ_homer/(circ_homer[zero_index])\n",
+    "    #no longer doing this here so we don't lose information, easy to do later\n",
+    "\n",
+    "    out_dict = {}\n",
+    "    for name in time_varying_params_df.columns():\n",
+    "        out_dict[name] = time_varying_params_df[name]\n",
+    "    out_dict['pre_splice_homer1_amount'] = pre_splice_homer\n",
+    "    out_dict['linear_homer1a_amount'] = homer1a\n",
+    "    out_dict['circ_homer1_amount'] = circ_homer\n",
+    "\n",
+    "    #these are all the same length so can be put in a dataframe\n",
+    "    out_df = pd.DataFrame(data)\n",
+    "    \n",
+    "    return out_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "measured_timepoints = np.array([0,2/24, 6/24, 24/24, 48/24])  #MUST contain 0\n",
+    "measured_circ_homer_levels = np.array([1, 1.5, 2, 2.5, 3])\n",
+    "measured_homer1a_levels = np.array([1, 12, 19, 3, 2])\n",
+    "\n",
+    "def normalize_to_t0(timepoints, values_at_times):\n",
+    "    zero_index = np.searchsorted(timepoints, [0])[0]\n",
+    "    return values_at_times/values_at_times[zero_index]\n",
+    "\n",
+    "\n",
+    "\n",
+    "  squared_error_homer1a = np.sum((homer1a_predicted - norm_linear_homer_levels)**2)\n",
+    "  squared_error_circ = np.sum((circhomer_predicted - norm_circ_homer_levels)**2)\n",
+    "  rss = (squared_error_homer1a+squared_error_circ)\n",
+    "  if np.isnan(rss):\n",
+    "    rss = 100000000000 #just needs to be bigger than error for a reasonable set of parameters\n",
+    "  return rss\n",
+    "\n",
+    "def error_func(time_varying_simulated_amounts_df, measured_timepoints, measured_homer1a_levels, measured_circ_homer_levels):\n",
+    "    timesteps = np.array(time_varying_params_df['timesteps'])\n",
+    "    \n",
+    "    #normalize them all and subtract simulated from measured\n",
+    "    simulated_1a_values = np.interp(measured_timepoints, timesteps, time_varying_params_df['linear_homer1a_amount'])\n",
+    "    lin_1a_error = normalize_to_t0(measured_timepoints, measured_homer1a_levels) - normalize_to_t0(timesteps, simulated_1a_values)\n",
+    "    \n",
+    "    simulated_circ_values = np.interp(measured_timepoints, timesteps, time_varying_params_df['circ_homer1_amount'])\n",
+    "    circ_error = normalize_to_t0(measured_timepoints, measured_circ_homer_levels) - normalize_to_t0(timesteps, simulated_circ_values)\\\n",
+    "    #is there really any point in keeping these seperate? at one point I wanted to see which was causing more error\n",
+    "    \n",
+    "    all_error_vect = np.array(list(circ_error).extend(list(lin_1a_error)))\n",
+    "    rss = np.sum(all_error_vect**2)\n",
+    "    if np.isnan(rss):\n",
+    "        rss = 100000000000 #just needs to be bigger than error for a reasonable set of parameters\n",
+    "    return rss\n",
+    "\n",
+    "def compute_aic_bic(rss, k, n):\n",
+    "  aic = 2*k+n*np.log(rss/n)\n",
+    "  #aicc = aic + (2*k**2 + 2*k)/(n-k-1)\n",
+    "  #print(f'aicc: {aicc}')\n",
+    "  bic = n*np.log(rss/n) + k * np.log(n)\n",
+    "  return aic, bic\n",
+    "    \n",
+    "def fit_system()\n",
+    "    #output AIC\n",
+    "   \n",
+    "\n",
+    "def save_figures(optimal_parameters):\n",
+    "\n",
+    "    plt.plot(timesteps,normalized_linear_amount , label='linear simulated')\n",
+    "    plt.plot(timesteps, normalized_circular_amount, label='circ simulated')\n",
+    "    plt.plot(timesteps, production_rate, label='transcription rate')\n",
+    "    plt.plot(timesteps, circularizing_fraction_array*100, label='circularizing percent')\n",
+    "\n",
+    "    plt.xlabel('Day')\n",
+    "    plt.ylabel('Normalized expression level (relative to T=0)')\n",
+    "    plt.legend()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "aic_dict = ordered_dict()\n",
+    "for param_set in bicuc_param_sets:\n",
+    "    \n",
+    "    \n",
+    "    fit_sytem\n",
+    "\n",
+    "    add AIC score\n",
+    "    \n",
+    "    save_figures\n",
+    "\n",
+    "\n",
+    "#plot and save AIC scores\n",
+    "    "
    ]
   },
   {
@@ -198,12 +506,7 @@
    },
    "outputs": [],
    "source": [
-    "def compute_aic_bic(rss, k, n):\n",
-    "  aic = 2*k+n*np.log(rss/n)\n",
-    "  #aicc = aic + (2*k**2 + 2*k)/(n-k-1)\n",
-    "  #print(f'aicc: {aicc}')\n",
-    "  bic = n*np.log(rss/n) + k * np.log(n)\n",
-    "  return aic, bic\n",
+    "\n",
     "\n",
     "\n",
     "def compare_simulated_to_measured(params_dict, max_t_units, min_t_units,\n",
