WIP: unstable code committed and pushed by shortcut script

--- a/scripts/notebook.ipynb
+++ b/scripts/notebook.ipynb
@@ -67,8 +67,13 @@
    "execution_count": 120,
    "id": "5e9731ca",
    "metadata": {
+    "editable": true,
     "id": "5e9731ca",
-    "lines_to_next_cell": 0
+    "lines_to_next_cell": 0,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -117,9 +122,14 @@
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
+    "editable": true,
     "id": "a06b6e4a",
     "lines_to_next_cell": 0,
-    "outputId": "989c69e2-c8c4-43e0-9ba6-7a36f66be4c3"
+    "outputId": "989c69e2-c8c4-43e0-9ba6-7a36f66be4c3",
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [
     {
@@ -206,36 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "748df12c-6e96-4160-a4c8-726b69d297f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Functions (to be pulled into different files later)\n",
-    "\n",
-    "def restructure_df(df_in, x_label) -> pd.DataFrame:\n",
-    "    df_list = []\n",
-    "    for column in df_in.columns:\n",
-    "        for measure in df_in[column]:\n",
-    "            #if column == '0d sh-scramble':\n",
-    "            #    adjusted_volume = volume/4/1.7/2.5\n",
-    "            #else:\n",
-    "            #adjusted_volume = measure/(3.5**3)#/4/1.7\n",
-    "            row_dict = {\n",
-    "                'source_experiment': column,\n",
-    "                x_label: measure\n",
-    "            }\n",
-    "            df_list.append(row_dict)\n",
-    "\n",
-    "    resturctured_df = pd.DataFrame(df_list)\n",
-    "    return resturctured_df\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 129,
    "id": "5f50b106-282b-46a6-916c-1ad49874b02e",
    "metadata": {},
    "outputs": [],
@@ -262,6 +243,41 @@
     "    save_path = os.path.join(repo_path, 'demo_data', f'{prefix}_histograms.png')\n",
     "    fig.savefig(save_path, bbox_inches='tight')\n",
     "    return (fig, ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "748df12c-6e96-4160-a4c8-726b69d297f0",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#Functions (to be pulled into different files later)\n",
+    "\n",
+    "def restructure_df(df_in, x_label) -> pd.DataFrame:\n",
+    "    df_list = []\n",
+    "    for column in df_in.columns:\n",
+    "        for measure in df_in[column]:\n",
+    "            #if column == '0d sh-scramble':\n",
+    "            #    adjusted_volume = volume/4/1.7/2.5\n",
+    "            #else:\n",
+    "            #adjusted_volume = measure/(3.5**3)#/4/1.7\n",
+    "            row_dict = {\n",
+    "                'source_experiment': column,\n",
+    "                x_label: measure\n",
+    "            }\n",
+    "            df_list.append(row_dict)\n",
+    "\n",
+    "    resturctured_df = pd.DataFrame(df_list)\n",
+    "    return resturctured_df\n",
+    "\n",
+    "\n"
    ]
   },
   {
